<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_random_recommend"
        android:icon="@drawable/ic_shuffle"
        android:title="@string/random_recommend"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_update_toc"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/update_toc"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_refresh_group_books"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_tag_manage"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/tags_manage"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_bookshelf_manage"
        android:icon="@drawable/ic_arrange"
        android:title="@string/bookshelf_management"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_download"
        android:icon="@drawable/ic_download_line"
        android:title="@string/cache_export"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_add_local"
        android:icon="@drawable/ic_add"
        android:title="@string/book_local"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_bookshelf_layout"
        android:icon="@drawable/ic_settings"
        android:title="@string/bookshelf_layout"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_check_missing_local_books"
        android:icon="@drawable/ic_find_replace"
        android:title="@string/check_missing"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_remote"
        android:icon="@drawable/ic_add"
        android:title="@string/add_remote_book"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_add_url"
        android:icon="@drawable/ic_add_online"
        android:title="@string/add_url"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_group_manage"
        android:icon="@drawable/ic_groups"
        android:title="@string/group_manage"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export_bookshelf"
        android:icon="@drawable/ic_export"
        android:title="@string/export_bookshelf"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_import_bookshelf"
        android:icon="@drawable/ic_import"
        android:title="@string/import_bookshelf"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_log"
        android:icon="@drawable/ic_cfg_about"
        android:title="日志"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_clear_invalid_cache"
        android:icon="@drawable/ic_outline_delete"
        android:title="@string/clear"
        app:showAsAction="never" />

</menu>
