<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_book_info_title"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_book_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/book_info"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/ll_default_group"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:minWidth="36dp"
        android:orientation="horizontal"
        android:paddingHorizontal="4dp">

        <ImageView
            android:id="@+id/iv_default_group"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/join_default_book_group"
            android:src="@drawable/ic_groups" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_book_tags"
        android:layout_width="52dp"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/tags_manage"
        android:padding="2dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_tag" />

</LinearLayout>
